RenewFlow/force-app/main/default/objects/Renewal_Setting__mdt/Renewal_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Renewal Setting</label>
    <pluralLabel>Renewal Settings</pluralLabel>
</CustomObject>