RenewFlow/force-app/main/default/objects/Renewal_Setting__mdt/fields/Default_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Default_Term_Months__c</fullName>
    <label>Default Term (Months)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>