RenewFlow/force-app/main/default/objects/Renewal_Setting__mdt/fields/Grace_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Days__c</fullName>
    <label>Grace Period (Days)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Days after expiry before an un-renewed subscription is marked churned.</description>
</CustomField>