RenewFlow/force-app/main/default/objects/Renewal_Setting__mdt/fields/Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Days__c</fullName>
    <label>Lead Time (Days)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Days before expiry that a renewal record is generated.</description>
</CustomField>